# autonomous-ai-assistant

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  autonomous_scheduler.py  pyproject.toml  requirements.txt
.claude/rules/: creation-quality.md  deletion-policy.md  memory-system.md  session-workflow.md  working-style.md
.claude/skills/ayumu-email/: SKILL.md
.claude/skills/browser/: SKILL.md
.claude/skills/calendar/: SKILL.md
.claude/skills/camera/: SKILL.md
.claude/skills/claude-history/: SKILL.md
.claude/skills/creation/: SKILL.md
.claude/skills/discord/: SKILL.md
gateway/: README.md  ayumu_gateway.py  cron.json  message_builder.py  scheduler_utils.py  session_manager.py
gateway/event_sources/: __init__.py  cron_source.py  discord_source.py  email_source.py  one_timer_source.py  timer_source.py  voice_source.py
infra/: generate_embeddings.py  setup-merge-drivers.sh  setup_embeddings.sh
memory/: README.md  goals.json  knowledge.json  todo.md  working_memory.md
memory/knowledge/: README.md  getting-started.md
tools/: README.md  camera.py  fetch_twilog_daily.py  find_related_memories.py  git-merge-json.py  insert_related_links.py  listen.py  memory_linker.py  ocr_image.py  pdf2text_ocr.py  play_media.py  post_mini_blog.py  pre_pull_merge.py  recall_memory.py  receive_email.py  search_memory.py  search_sessions.py  send_discord.py  send_email.py  session_recall.py  set_timer.py  statusline.sh  talk.py  update_articles.py  update_creations.py  update_diary.py  update_experiences.py  update_goals.py  update_knowledge.py
(+16 files in other folders)
